--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         #features {
             top: 0;
-            height: 100px;
+            height: 150px;
             margin-top: 20px;
             width: 250px;
         }
@@ -64,7 +64,7 @@
             padding: 10px;
             box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
             line-height: 18px;
-            height: 210px;
+            height: 150px;
             margin-bottom: 40px;
             width: 150px;
         }
@@ -87,7 +87,7 @@
 <body>
     <div id="map"></div>
     <div class='map-overlay' id='features'>
-        <h2>US population deathPer10k</h2>
+        <h2>WA Death Rate Per 10,000 residents</h2>
         <div id='text-escription'>
             <p>Hover over a county!</p>
         </div>
@@ -125,19 +125,19 @@
                             ['get', 'deathPer10k'],
                             '#FFEDA0',   // stop_output_0
                             10,          // stop_input_0
-                            '#FED976',   // stop_output_1
+                            '#FFA500',   // stop_output_1
                             20,          // stop_input_1
-                            '#FEB24C',   // stop_output_2
+                            '#800000',   // stop_output_2
                             50,          // stop_input_2
                             '#FD8D3C',   // stop_output_3
                             100,         // stop_input_3
                             '#FC4E2A',   // stop_output_4
                             200,         // stop_input_4
-                            '#E31A1C',   // stop_output_5
+                            '#FC4E2A',   // stop_output_5
                             500,         // stop_input_5
-                            '#BD0026',   // stop_output_6
+                            '#FC4E2A',   // stop_output_6
                             1000,        // stop_input_6
-                            "#800026"    // stop_output_7
+                            "#FC4E2A"    // stop_output_7
                         ],
                         'fill-outline-color': '#BBBBBB',
                         'fill-opacity': 0.7,
@@ -147,27 +147,23 @@
                 const layers = [
                     '0-9',
                     '10-19',
-                    '20-49',
-                    '50-99',
-                    '100-199',
-                    '200-499',
-                    '500-999',
-                    '1000 and more'
+                    '20 or more',
+
                 ];
                 const colors = [
-                    '#FFEDA070',
-                    '#FED97670',
-                    '#FEB24C70',
+                    '#FFEDA0',
+                    '#FFA500',
+                    '#800000',
                     '#FD8D3C70',
                     '#FC4E2A70',
                     '#E31A1C70',
                     '#BD002670',
-                    '#80002670'
+                    '#FFEDA070'
                 ];
 
                 // create legend
                 const legend = document.getElementById('legend');
-                legend.innerHTML = "<b>Population deathPer10k<br>(people/sq.mi.)</b><br><br>";
+                legend.innerHTML = "<b>Death Rate Per 10000<br></b><br><br>";
 
 
                 layers.forEach((layer, i) => {
@@ -190,7 +186,7 @@
                     layers: ['wa_data-layer']
                 });
                 document.getElementById('text-escription').innerHTML = county.length ?
-                    `<h3>${county[0].properties.name}</h3><p><strong><em>${county[0].properties.deathPer10k}</strong> people per square mile</em></p>` :
+                    `<h3>${county[0].properties.name}</h3><p><strong><em>${county[0].properties.deathPer10k}</strong> Every 10000 people</em></p>` :
                     `<p>Hover over a county!</p>`;
             });
         }
